--- a/1.1. Plan.md
+++ b/1.1. Plan.md
@@ -17,7 +17,7 @@ Creating a password manager in Python for multiple users, where data is stored i
 
 For simplicity, we will create a structure where:
 - Each user has their own file that contains encrypted passwords.
-- The passwords will be stored in a dictionary-like format (key-value pairs) where the key is the website or service name, and the value is the password.
+- The passwords will be stored in a dictionary-like format (key-value pairs) where the key is the website or account name, and the value is the password.
 
 ---
 
@@ -104,8 +104,8 @@ def save_passwords(username, passwords):
     with open(f"{username}_passwords.json", 'w') as file:
         json.dump(passwords, file)
 
-def add_password(username, service, password):
-    """Add a password for a service under the user's account."""
+def add_password(username, account, password):
+    """Add a password for a account under the user's account."""
     key = load_key(username)
     if not key:
         print("No encryption key found for this user.")
@@ -120,16 +120,16 @@ def add_password(username, service, password):
     if passwords is None:
         return
 
-    # Add the encrypted password for the service
-    passwords[service] = encrypted_password
+    # Add the encrypted password for the account
+    passwords[account] = encrypted_password
 
     # Save updated passwords
     save_passwords(username, passwords)
 
-    print(f"Password for {service} added successfully.")
+    print(f"Password for {account} added successfully.")
 
-def retrieve_password(username, service):
-    """Retrieve and decrypt the password for a service under the user's account."""
+def retrieve_account_details(username, account):
+    """Retrieve and decrypt the password for a account under the user's account."""
     key = load_key(username)
     if not key:
         print("No encryption key found for this user.")
@@ -142,12 +142,12 @@ def retrieve_password(username, service):
         return
 
     # Retrieve the encrypted password
-    if service in passwords:
-        encrypted_password = passwords[service]
+    if account in passwords:
+        encrypted_password = passwords[account]
         decrypted_password = decrypt_data(key, encrypted_password)
-        print(f"Password for {service}: {decrypted_password}")
+        print(f"Password for {account}: {decrypted_password}")
     else:
-        print(f"No password found for {service}.")
+        print(f"No password found for {account}.")
 ```
 
 ---
@@ -186,13 +186,13 @@ def main():
                 sub_choice = input("Select an option (1/2/3): ")
 
                 if sub_choice == '1':
-                    service = input("Enter the service (e.g., Google, Facebook): ")
+                    account = input("Enter the account (e.g., Google, Facebook): ")
                     password = input("Enter the password: ")
-                    add_password(username, service, password)
+                    add_password(username, account, password)
 
                 elif sub_choice == '2':
-                    service = input("Enter the service (e.g., Google, Facebook): ")
-                    retrieve_password(username, service)
+                    account = input("Enter the account (e.g., Google, Facebook): ")
+                    retrieve_account_details(username, account)
 
                 elif sub_choice == '3':
                     print("Logging out...")
@@ -216,8 +216,8 @@ if __name__ == "__main__":
    - Each password is encrypted before being saved and decrypted when retrieved.
 
 3. **Password Management**:
-   - You can add a password for a service using `add_password`.
-   - You can retrieve a password for a service using `retrieve_password`.
+   - You can add a password for a account using `add_password`.
+   - You can retrieve a password for a account using `retrieve_account_details`.
 
 4. **File Structure**:
    - For each user, two files are created:
@@ -254,7 +254,7 @@ Welcome john_doe!
 2. Retrieve a password
 3. Logout
 Select an option (1/2/3): 1
-Enter the service (e.g., Google, Facebook): Google
+Enter the account (e.g., Google, Facebook): Google
 Enter the password: mysecretpassword
 Password for Google added successfully.
 
@@ -262,7 +262,7 @@ Password for Google added successfully.
 2. Retrieve a password
 3. Logout
 Select an option (1/2/3): 2
-Enter the service (e.g., Google, Facebook): Google
+Enter the account (e.g., Google, Facebook): Google
 Password for Google: mysecretpassword
 ```
 
