--- a/1.2. Explination of plan.md
+++ b/1.2. Explination of plan.md
@@ -40,7 +40,7 @@ Certainly! Let's expand on each aspect of the password manager plan and break do
 
 - **Retrieving Passwords:**
    - When a user wants to retrieve a password, the system loads the encrypted passwords from their file and decrypts them using their unique key.
-   - The function `retrieve_password()` takes the service name as input (e.g., "Google") and returns the decrypted password for that service.
+   - The function `retrieve_account_details()` takes the account name as input (e.g., "Google") and returns the decrypted password for that account.
    - This makes the system user-friendly, while keeping the password storage and retrieval secure.
 
 ### **4. Why Use Files Instead of a Database?**
@@ -57,13 +57,13 @@ Certainly! Let's expand on each aspect of the password manager plan and break do
    - A simple command-line interface (CLI) is used to interact with the password manager. It allows users to:
      - Create a new user.
      - Log in as an existing user.
-     - Add passwords for different services.
+     - Add passwords for different accounts.
      - Retrieve saved passwords.
    - The CLI is straightforward and allows users to select from a list of options:
      - **Create a new user**: Prompts the user to enter a username, creates the user’s password file and encryption key.
      - **Login**: The user provides a username. The application validates that the user exists and can then perform password-related actions.
-     - **Add a password**: The user enters the service name (e.g., Google, Facebook) and the password. The password is then encrypted and stored in the user’s file.
-     - **Retrieve a password**: The user enters a service name, and the system retrieves the corresponding password by decrypting it.
+     - **Add a password**: The user enters the account name (e.g., Google, Facebook) and the password. The password is then encrypted and stored in the user’s file.
+     - **Retrieve a password**: The user enters a account name, and the system retrieves the corresponding password by decrypting it.
      - **Logout**: Exits the user session.
 
 - **Why a CLI?**:
