--- a/2. Testing.md
+++ b/2. Testing.md
@@ -17,14 +17,14 @@ import os
 import pytest
 from cryptography.fernet import Fernet
 
-# Reuse the password manager functions here (e.g., create_user, add_password, retrieve_password, etc.)
+# Reuse the password manager functions here (e.g., create_user, add_password, retrieve_account_details, etc.)
 # Assumes you have a setup function for creating test users and cleaning up.
 
 @pytest.fixture(scope="module")
 def setup():
     """Set up test user environment."""
     test_username = "test_user"
-    test_service = "test_service"
+    test_account = "test_account"
     test_password = "test_password_123"
 
     # Clean up previous files
@@ -32,7 +32,7 @@ def setup():
 
     yield {
         "username": test_username,
-        "service": test_service,
+        "account": test_account,
         "password": test_password
     }
 
@@ -58,37 +58,37 @@ def test_create_user(setup):
     assert os.path.exists(f"{username}_key.key")
 
 def test_add_password(setup):
-    """Test adding a password to a service."""
+    """Test adding a password to a account."""
     username = setup["username"]
-    service = setup["service"]
+    account = setup["account"]
     password = setup["password"]
 
     create_user(username)  # Ensure user exists
 
-    add_password(username, service, password)  # Add a password
+    add_password(username, account, password)  # Add a password
     
     # Load the passwords from file
     passwords = load_passwords(username)
-    assert service in passwords  # Ensure service is in the dictionary
+    assert account in passwords  # Ensure account is in the dictionary
     
     # Decrypt the password
     key = load_key(username)
     fernet = Fernet(key)
-    decrypted_password = fernet.decrypt(passwords[service]).decode()
+    decrypted_password = fernet.decrypt(passwords[account]).decode()
     
     assert decrypted_password == password  # Verify password matches
 
-def test_retrieve_password(setup):
+def test_retrieve_account_details(setup):
     """Test retrieving a password."""
     username = setup["username"]
-    service = setup["service"]
+    account = setup["account"]
     password = setup["password"]
 
     create_user(username)  # Ensure user exists
-    add_password(username, service, password)  # Add a password
+    add_password(username, account, password)  # Add a password
 
     # Retrieve the password
-    retrieved_password = retrieve_password(username, service)
+    retrieved_password = retrieve_account_details(username, account)
     assert retrieved_password == password  # Verify the retrieved password matches
 
 ```
@@ -158,21 +158,21 @@ def test_login_failure(app):
 def test_add_password(app):
     """Test adding a password."""
     app.username = "test_user"
-    app.service_entry.insert(0, "test_service")
+    app.account_entry.insert(0, "test_account")
     app.password_entry.insert(0, "test_password_123")
     
     with patch('tkinter.messagebox.showinfo') as mock_showinfo:
         app.add_password()
-        mock_showinfo.assert_called_with("Success", "Password for test_service added successfully!")
+        mock_showinfo.assert_called_with("Success", "Password for test_account added successfully!")
 
-def test_retrieve_password(app):
+def test_retrieve_account_details(app):
     """Test retrieving a password."""
     app.username = "test_user"
-    app.service_entry.insert(0, "test_service")
+    app.account_entry.insert(0, "test_account")
     
     with patch('tkinter.messagebox.showinfo') as mock_showinfo:
-        app.retrieve_password()
-        mock_showinfo.assert_called_with("Success", "Password for test_service: test_password_123")
+        app.retrieve_account_details()
+        mock_showinfo.assert_called_with("Success", "Password for test_account: test_password_123")
 ```
 
 #### **Explanation**:
