--- a/3. GUI extenstion.md
+++ b/3. GUI extenstion.md
@@ -14,7 +14,7 @@ Instead of the command-line prompts for creating a user or logging in, we'll use
 
 ### **3. Displaying and Adding Passwords**
 
-We'll create a section for adding passwords to different services (like Google, Facebook), and another section to retrieve and display them.
+We'll create a section for adding passwords to different accounts (like Google, Facebook), and another section to retrieve and display them.
 
 ---
 
@@ -34,7 +34,7 @@ import os
 import json
 
 # Reuse your previous password manager functions here
-# (generate_key, save_key, load_key, encrypt_data, decrypt_data, add_password, retrieve_password, etc.)
+# (generate_key, save_key, load_key, encrypt_data, decrypt_data, add_password, retrieve_account_details, etc.)
 # For brevity, I am skipping the code here as it's similar to what we previously discussed.
 ```
 
@@ -101,10 +101,10 @@ class PasswordManagerApp:
         self.password_management_frame = tk.Frame(self.root)
         self.password_management_frame.pack(pady=20)
 
-        self.service_label = tk.Label(self.password_management_frame, text="Service:")
-        self.service_label.grid(row=0, column=0, padx=10, pady=5)
-        self.service_entry = tk.Entry(self.password_management_frame)
-        self.service_entry.grid(row=0, column=1, padx=10, pady=5)
+        self.account_label = tk.Label(self.password_management_frame, text="account:")
+        self.account_label.grid(row=0, column=0, padx=10, pady=5)
+        self.account_entry = tk.Entry(self.password_management_frame)
+        self.account_entry.grid(row=0, column=1, padx=10, pady=5)
 
         self.password_label = tk.Label(self.password_management_frame, text="Password:")
         self.password_label.grid(row=1, column=0, padx=10, pady=5)
@@ -114,34 +114,34 @@ class PasswordManagerApp:
         self.add_password_button = tk.Button(self.password_management_frame, text="Add Password", command=self.add_password)
         self.add_password_button.grid(row=2, column=0, padx=10, pady=10)
 
-        self.retrieve_password_button = tk.Button(self.password_management_frame, text="Retrieve Password", command=self.retrieve_password)
-        self.retrieve_password_button.grid(row=2, column=1, padx=10, pady=10)
+        self.retrieve_account_details_button = tk.Button(self.password_management_frame, text="Retrieve Password", command=self.retrieve_account_details)
+        self.retrieve_account_details_button.grid(row=2, column=1, padx=10, pady=10)
 
         self.logout_button = tk.Button(self.password_management_frame, text="Logout", command=self.logout)
         self.logout_button.grid(row=3, column=0, columnspan=2, pady=10)
 
     def add_password(self):
-        """Add a password for a service."""
-        service = self.service_entry.get().strip()
+        """Add a password for a account."""
+        account = self.account_entry.get().strip()
         password = self.password_entry.get().strip()
-        if service == "" or password == "":
+        if account == "" or password == "":
             messagebox.showerror("Error", "Both fields are required.")
             return
-        add_password(self.username, service, password)  # Reuse add_password function
-        messagebox.showinfo("Success", f"Password for {service} added successfully!")
+        add_password(self.username, account, password)  # Reuse add_password function
+        messagebox.showinfo("Success", f"Password for {account} added successfully!")
 
-    def retrieve_password(self):
-        """Retrieve and display a password for a service."""
-        service = self.service_entry.get().strip()
-        if service == "":
-            messagebox.showerror("Error", "Service field cannot be empty.")
+    def retrieve_account_details(self):
+        """Retrieve and display a password for a account."""
+        account = self.account_entry.get().strip()
+        if account == "":
+            messagebox.showerror("Error", "account field cannot be empty.")
             return
-        password = retrieve_password(self.username, service)  # Reuse retrieve_password function
+        password = retrieve_account_details(self.username, account)  # Reuse retrieve_account_details function
         if password:
             self.password_entry.delete(0, tk.END)
             self.password_entry.insert(0, password)
         else:
-            messagebox.showerror("Error", f"No password found for {service}.")
+            messagebox.showerror("Error", f"No password found for {account}.")
 
     def logout(self):
         """Logout and return to the login screen."""
@@ -173,16 +173,16 @@ if __name__ == "__main__":
    - The `create_user()` function creates a new user, generates an encryption key, and sets up a new password file.
 
 3. **Password Management**:
-   - After logging in, the user can add new passwords for services (e.g., Google, Facebook) and retrieve stored passwords.
-   - The user enters the service name and password in the respective `Entry` widgets.
-   - The `add_password()` and `retrieve_password()` methods call the existing password management functions.
+   - After logging in, the user can add new passwords for accounts (e.g., Google, Facebook) and retrieve stored passwords.
+   - The user enters the account name and password in the respective `Entry` widgets.
+   - The `add_password()` and `retrieve_account_details()` methods call the existing password management functions.
 
 4. **Logout**:
    - The `logout()` function logs the user out and returns to the login screen.
 
 5. **GUI Components**:
    - **Frames**: We use `tk.Frame()` to organize widgets in sections (like login and password management).
-   - **Labels and Entries**: `tk.Label()` displays text (like "Service" and "Password"), and `tk.Entry()` allows the user to input text.
+   - **Labels and Entries**: `tk.Label()` displays text (like "account" and "Password"), and `tk.Entry()` allows the user to input text.
    - **Buttons**: `tk.Button()` triggers actions like logging in, adding passwords, and retrieving passwords.
 
 6. **Clear Frame**:
